Fixed big margins on mobile devices.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,3 +62,13 @@
 }
 
 @import 'iphone';
+
+@media screen and (max-width: 380px) {
+  .container, .single-post {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .tab-content {
+    padding: 2px !important;
+  }
+}
